# api/user/controller.go
@@ -5,7 +5,13 @@ import (
 	"github.com/dgrijalva/jwt-go"
 	"golang.org/x/crypto/bcrypt"
 	
+	"bytes"
+	"math/rand"
 	"time"
+	"encoding/json"
+	"fmt"
+	"net/http"
+	"crypto/sha1"
 	"challenge3/database"
 	"challenge3/models"
 	repo "challenge3/repository"
@@ -13,6 +19,7 @@ import (
 )
 
 var mySigningKey = "pa$$w0rd"
+var siteKey = "6Lez19QfAAAAAOD76uihNiKbKv62kL9ap-8KS35_";
 
 func Response(c *gin.Context, code int, message string) {
 	c.JSON(code, gin.H{
@@ -48,7 +55,7 @@ func GetListUser(userService *usecase.UserService) func(c *gin.Context) {
 		userList, err := userService.GetListUser()
 	
 		if err != nil {
-			Response(c, 200, "Database is wrong")
+			Response(c, 500, "Database is wrong")
 			return
 		}
 	
@@ -62,36 +69,77 @@ func GetListUser(userService *usecase.UserService) func(c *gin.Context) {
 func LogIn(c *gin.Context) {
 	connection := database.GetDatabase()
 	userRepo := repo.NewUserRepo(connection)
+	checkPassRepo := repo.NewCheckPassRepo(connection)
+	checkPassService := usecase.NewCheckPassService(checkPassRepo)
 
 	var user models.Authen
+	clientIP := c.ClientIP()
 
 	if err := c.ShouldBindJSON(&user); err != nil {
 		c.JSON(500, err)
 		return
 	}
 
-	// email := c.PostForm("email")
-	// password := c.PostForm("password")
+	// user.Email = c.PostForm("email")
+	// user.Password = c.PostForm("password")
 	userAuth, _ := userRepo.Find(user.Email)	
 	if userAuth.Email == "" {
-		Response(c, 200, "Not User")
+		Response(c, 400, "Username or password is incorrect")
 		return
 	}
 
+	checkPassDoc, errCheck := checkPassService.FindCheck(clientIP, user.Email)
+	if errCheck == nil && checkPassDoc.FailedLogin >= 2 {
+		captchaKey := user.Captcha
+		var body = []byte(`{"secret":"` + siteKey + `", "response":"` + captchaKey + `"}`)
+		var r map[string]interface{}
+
+		req, err := http.NewRequest("POST", "https://www.google.com/recaptcha/api/siteverify", bytes.NewBuffer(body))
+		if err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+		req.Header.Set("Content-Type", "application/json")
+
+		client := &http.Client{}
+		resp, err := client.Do(req)
+		if err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		defer resp.Body.Close()
+		err = json.NewDecoder(resp.Body).Decode(&r)
+		if err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		if success := r["success"]; success == "false" {
+			c.JSON(400, gin.H{})
+			return
+		}
+	}
+
 	if check := CheckPasswordHash(user.Password, userAuth.Password); !check {
-		Response(c, 200, "Password is not correct")
+		checkPassService.UpdateCheck(clientIP, user.Email)
+		Response(c, 400, "Username or password is incorrect")
 		return
 	} 
 	
 	tokenString, err := GenerateJWT(&userAuth)
 	if err != nil {
-		Response(c, 200, "Cannot generate jwt token")
+		Response(c, 500, "")
 		return
 	}
 
 	// c.SetCookie("token", tokenString, 150, "/", "localhost", false, true)
+	if errCheck == nil {
+		checkPassService.DeleteCheck(clientIP, user.Email)
+	}
 	c.JSON(200, gin.H{
 		"token": tokenString,
+		"expiredIn": 300,
 	})
 }
 
@@ -115,18 +163,20 @@ func Register(userService *usecase.UserService) func(c *gin.Context) {
 		hashPassword, err := bcrypt.GenerateFromPassword([]byte(password), 14)
 	
 		if err != nil {
-			Response(c, 200, "Cannot generate hash password")
+			Response(c, 500, "Cannot generate hash password")
 			return
 		}
 
 		// userCheck, _ := userService.FindUser(email)
 		
-		_, err = userService.CreateUser(email, name, string(hashPassword))
+		result, err := userService.CreateUser(email, name, string(hashPassword))
 		if err != nil {
-			Response(c, 200, "Email is already existed")
+			Response(c, 400, "Email is already existed")
 			return
 		}
-		Response(c, 200, "Create user successfully")
+		c.JSON(200, gin.H{
+			"user": result,
+		})
 	}
 }
 
@@ -137,17 +187,19 @@ func CreateUser(userService *usecase.UserService) func(c *gin.Context) {
 		hashPassword, err := bcrypt.GenerateFromPassword([]byte(password), 14)
 	
 		if err != nil {
-			Response(c, 200, "Cannot generate hash password")
+			Response(c, 500, "Cannot generate hash password")
 			return
 		}
 	
-		_, err = userService.CreateUser(c.PostForm("email"), c.PostForm("name"), string(hashPassword))
+		result, err := userService.CreateUser(c.PostForm("email"), c.PostForm("name"), string(hashPassword))
 		if err != nil {
-			Response(c, 200, "Email is already existed")
+			Response(c, 400, "Email is already existed")
 			return
 		}
 
-		Response(c, 200, "Create user successfully")
+		c.JSON(200, gin.H{
+			"user": result,
+		})
 	}
 }
 
@@ -158,11 +210,11 @@ func DeleteUser(userService *usecase.UserService) func(c *gin.Context) {
 	
 		err := userService.DeleteUser(email)
 		if err != nil {
-			Response(c, 200, "Does not exist user")
+			Response(c, 400, "Does not exist user")
 			return
 		}
 
-		Response(c, 200, "Delete user successfully")
+		c.JSON(204, gin.H{})
 	}
 }
 
@@ -177,11 +229,11 @@ func UpdateUser(userService *usecase.UserService) func(c *gin.Context) {
 		
 		err := userService.UpdateUser(user)
 		if err != nil {
-			Response(c, 200, "Do not exist user")
+			Response(c, 400, "Do not exist user")
 			return
 		}
 	
-		Response(c, 200, "Update user successfully")
+		c.JSON(204, gin.H{})
 	}
 
 }
@@ -203,7 +255,7 @@ func NewRole(roleService *usecase.RoleService) func(c *gin.Context) {
 		
 		err := roleService.Create(name, permission)
 		if err != nil {
-			Response(c, 200, "This role is available")
+			Response(c, 400, "This role is available")
 			return
 		}
 
@@ -220,19 +272,182 @@ func ChangeRole(userService *usecase.UserService, roleService *usecase.RoleServi
 	
 		userCheck, _ := userService.FindUser(email)
 		if userCheck.Email == "" {
-			Response(c, 200, "Does not exist user")
+			Response(c, 400, "Does not exist user")
 			return
 		}
 	
 		roleCheck, _ := roleService.Find(role)
 		if roleCheck.Name == "" {
-			Response(c, 200, "Does not exist role")
+			Response(c, 400, "Does not exist role")
 			return
 		}
 	
 		userCheck.Role = role
 		connection.Save(&userCheck)
-		Response(c, 200, "Change role successfully")
+		c.JSON(204, gin.H{})
 	}
 
+}
+
+func GetMe(userService *usecase.UserService) gin.HandlerFunc {
+	return func (c *gin.Context) {
+		email := c.MustGet("email").(string)
+		user, err := userService.FindUser(email)
+		if err != nil {
+			c.JSON(400, err.Error())
+			return
+		}
+
+		c.JSON(200, user)
+	}
+}
+
+func GetUser(userService *usecase.UserService) gin.HandlerFunc {
+	return func (c *gin.Context) {
+		email := c.Param("userEmail")
+		user, err := userService.FindUser(email)
+		if err != nil {
+			c.JSON(400, err.Error())
+			return
+		}
+
+		c.JSON(200, user)
+	}
+}
+
+func ChangePass(userService *usecase.UserService) gin.HandlerFunc {
+	return func (c *gin.Context) {
+		var changePassRequest models.ChangePassRequest
+		if err := c.ShouldBindJSON(&changePassRequest); err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		user, err := userService.FindUser(changePassRequest.Email)
+		if err != nil {
+			c.JSON(400, gin.H{})
+			return
+		}
+
+		if !CheckPasswordHash(changePassRequest.OldPassword, user.Password) {
+			c.JSON(400, gin.H{})
+			return
+		}
+
+		if changePassRequest.NewPassword == changePassRequest.OldPassword {
+			c.JSON(400, gin.H{})
+			return
+		}
+
+		if changePassRequest.ConfirmPassword != changePassRequest.NewPassword {
+			c.JSON(400, gin.H{})
+			return
+		}
+
+		hashPassword, err := bcrypt.GenerateFromPassword([]byte(changePassRequest.NewPassword), 14)
+		if err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		user.Password = string(hashPassword)
+		if err := userService.UpdateUser(user); err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		c.JSON(204, gin.H{})
+	}
+
+}
+
+func SendResetPassword(userService *usecase.UserService, resetPasswordService *usecase.ResetPasswordService) gin.HandlerFunc {
+	return func (c *gin.Context) {
+		rand.Seed(time.Now().UnixNano())
+		var user models.User
+		if err := c.ShouldBindJSON(&user); err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+		user, err := userService.FindUser(user.Email)
+		if err != nil {
+			c.JSON(204, gin.H{})
+			return
+		}
+		randomString := resetPasswordService.GenerateResetPasswordToken(64)
+		err = resetPasswordService.StoreToken([]byte(randomString), user.Email)
+		if err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		c.JSON(200, gin.H{
+			"resetPasswordToken": randomString,
+		})
+	}
+}
+
+func ResetPassword(userService *usecase.UserService, resetPasswordService *usecase.ResetPasswordService) gin.HandlerFunc {
+	return func (c *gin.Context) {
+		token := c.Query("token")
+		var (
+			changePass models.ChangePassRequest
+			user models.PasswordResetToken
+			listDoc []models.PasswordResetToken
+			matchRow models.PasswordResetToken
+		) 
+		if err := c.ShouldBindJSON(&changePass); err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		user, err := resetPasswordService.FindUser(token)
+		if err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		listDoc, err = resetPasswordService.FindAllToken(user.Email)
+		if err != nil {
+			c.JSON(400, gin.H{})
+			return
+		}
+
+		hasher := sha1.New()
+		hasher.Write([]byte(token))
+		result := hasher.Sum(nil)
+		
+		for _, doc := range listDoc {
+			if check := bytes.Compare(doc.Token, []byte(result)); check == 0{
+				matchRow = doc
+				break
+			}
+		}
+
+		if matchRow.Email == "" && bytes.Compare(matchRow.Token, []byte("")) == 0 {
+			c.JSON(400, gin.H{})
+			return
+		}
+
+		_ = resetPasswordService.DeleteAll(user.Email)
+		fmt.Println(matchRow)
+		if time.Now().After(matchRow.ExpriedIn) {
+			c.JSON(403, gin.H{})
+			return
+		}
+		hashPassword, err := bcrypt.GenerateFromPassword([]byte(changePass.NewPassword), 14)
+		if err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		userUpdate, _ := userService.FindUser(user.Email)
+		userUpdate.Password = string(hashPassword)
+		if err := userService.UpdateUser(userUpdate); err != nil {
+			c.JSON(500, gin.H{})
+			return
+		}
+
+		c.JSON(204, gin.H{})
+	}
 }
